--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "lenis": "^1.1.18",
     "lucide-react": "^0.469.0",
     "next": "14.2.15",
@@ -33,11 +33,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
